--- a/index.html
+++ b/index.html
@@ -335,8 +335,8 @@
         <div class="filters">
                         <ul>
                             <li class="active" data-filter="*">All</li>
-                            <li data-filter=".packaging">Work/Personal Projects</li>
-                            <li data-filter=".mockup">Class Projects</li>
+                            <li data-filter=".personal">Work/Personal Projects</li>
+                            <li data-filter=".class">Class Projects</li>
                       
                         </ul>
                     </div>
@@ -344,7 +344,7 @@
                     <div class="filters-content">
                         <div class="row grid">
                           <!-- STUTTER -->
-                            <div class="single-portfolio col-sm-4 all packaging">
+                            <div class="single-portfolio col-sm-4 all personal">
                               <div class="relative">
                                 <div class="thumb">
                                   <div class="overlay overlay-bg"></div>
@@ -404,7 +404,7 @@
                             </div>
 
 
-                            <div class="single-portfolio col-sm-4 all packaging">
+                            <div class="single-portfolio col-sm-4 all personal">
                               <div class="relative">
                                 <div class="thumb">
                                   <div class="overlay overlay-bg"></div>
@@ -469,7 +469,7 @@
                             </div>  
 
 
-                            <div class="single-portfolio col-sm-4 all packaging">
+                            <div class="single-portfolio col-sm-4 all personal">
                               <div class="relative">
                                 <div class="thumb">
                                   <div class="overlay overlay-bg"></div>
@@ -527,7 +527,7 @@
                             </div>
 
 
-                            <div class="single-portfolio col-sm-4 all packaging">
+                            <div class="single-portfolio col-sm-4 all personal">
                               <div class="relative">
                                 <div class="thumb">
                                   <div class="overlay overlay-bg"></div>
@@ -582,7 +582,7 @@
 
 
 
-                            <div class="single-portfolio col-sm-4 all mockup">
+                            <div class="single-portfolio col-sm-4 all class">
                               <div class="relative">
                               <div class="thumb">
                                   <div class="overlay overlay-bg"></div>
@@ -631,7 +631,7 @@
 
 
 
-                            <div class="single-portfolio col-sm-4 all mockup">
+                            <div class="single-portfolio col-sm-4 all class">
                               <div class="relative">
                                 <div class="thumb">
                                   <div class="overlay overlay-bg"></div>
@@ -682,7 +682,7 @@
                             </div>
 
 
-                <div class="single-portfolio col-sm-4 all mockup">
+                <div class="single-portfolio col-sm-4 all class">
                               <div class="relative">
                                 <div class="thumb">
                                   <div class="overlay overlay-bg"></div>
