--- a/index.html
+++ b/index.html
@@ -886,7 +886,7 @@
     
     <script src="js/modal.js"></script>
     <script src="js/vendor/jquery.min.js"></script>
-    <script src="js/vendor/popper.min.js"></script>
+    <script src="popper.min.js"></script>
     <script src="js/vendor/bootstrap.min.js"></script>
     
     <script src="js/vendor/jquery.easing.1.3.js"></script>
