--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <li class="nav-item"><a class="nav-link" href="#section-portfolio">Portfolio</a></li>
             <!-- <li class="nav-item"><a class="nav-link" href="#section-resume">Resume</a></li> -->
             <!-- <li class="nav-item"><a class="nav-link" href="#section-blog">Blog</a></li> -->
-            <li class="nav-item"><a class="nav-link" href="#section-contact">Contact</a></li>
+<!--             <li class="nav-item"><a class="nav-link" href="#section-contact">Contact</a></li> -->
           </ul>
         </div>
       </div>
