--- a/index.html
+++ b/index.html
@@ -860,7 +860,7 @@
     </section> -->
 
 
-    <footer class="site-footer">
+<!--     <footer class="site-footer">
       <div class="container">
         <div class="row mb-3">
           <div class="col-md-12 text-center">
@@ -868,11 +868,11 @@
               <a href="#" class="social-item"><span class="icon-facebook2"></span></a>
               <a href="#" class="social-item"><span class="icon-twitter"></span></a>
               <!-- <a href="#" class="social-item"><span class="icon-instagram2"></span></a> -->
-              <a href="#" class="social-item"><span class="icon-linkedin2"></span></a>
+<!--               <a href="#" class="social-item"><span class="icon-linkedin2"></span></a> -->
               <!-- <a href="#" class="social-item"><span class="icon-vimeo"></span></a> -->
-            </p>
+<!--             </p>
           </div>
-        </div>
+        </div> -->
        <!--  <div class="row">
             <p class="col-12 text-center">
             <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
@@ -881,7 +881,7 @@
             <!-- </p>
         </div>  -->
       </div>
-    </footer>
+    </footer> -->
 
     
 <!--     <script src="js/modal.js"></script> -->
