--- a/index.html
+++ b/index.html
@@ -880,7 +880,7 @@
  -->            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
             <!-- </p>
         </div>  -->
-      </div>
+<!--       </div>
     </footer> -->
 
     
