--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
                                       <p>My specific task in this project was processing archives using <b> natural language procesing</b>, and using that data to create <b> animations and visualizations </b> to be displayed on the exterior and interior of the exhibit </p>
 
                                       <p> For one of the animations (an interactive word tree), I used NLP to parse data and d3.js to visualize it: </p>
-                                      <a href = "https://su19-codeu-28-9472.appspot.com"> View the github repo  </a>
+                                      <a href = "https://github.com/juvariashahid/WordTree"> View the github repo  </a>
                                       <!-- <a href = "https://github.com/juvariashahid/team-28-codeu"> View my code </a> -->
 
                                       <br>
@@ -606,7 +606,7 @@
                                 <div class="modal-content">
                                   <span id="cW" class="close">&times;</span>
                                     <center> <h5> I created a web server from scratch for my Advanced Programming class  </h5> </center>
-                                    <p> I ....</p>
+                                    <p> The web server implements a subset of HTTP 1.0, and handles GET requests for static content. In addition, it returns dynamic content by searching through a database.</p>
 
 
                                     <p> <b> Tools/Languages I used: </b>
@@ -617,7 +617,10 @@
 
                                     <p> <b> Skills I learned or became better at: </b>
                                       <ul id = "list">
-                                        <li> GET FROM ARTICLE</li>
+                                        <li> Socket Programming</li>
+                                        <li> I/O in C, TCP/IP</li>
+                                        <li> process management in UNIX</li>
+                                  
                                     
                                       </ul>
                                     </p>
@@ -654,7 +657,7 @@
                           <!-- Modal content -->
                                 <div class="modal-content">
                                   <span id="cP" class="close">&times;</span>
-                                    <center> <h5> For my introduction to Intro to Python class, I simulated the outbreak of an infectious disease </h5> </center>
+                                    <center> <h5> For my Intro to Python class, I simulated the outbreak of an infectious disease </h5> </center>
                                     <p> </p>
                                     <p> The model created was based on the SRI-model: At any time, the map can be in one of the three states: susceptible, resistant, and infected. Once a cell is infected, it has the potential to infect neighboring cells. Initally, one cell is infected and all other cells are susceptible </p>
                                   <p> Time is measured in discrete steps. After a number of steps, the disease will have spread and infected a number of cells. Some may have recovered and others may have died.</p>
