--- a/index.html
+++ b/index.html
@@ -605,8 +605,8 @@
                           <!-- Modal content -->
                                 <div class="modal-content">
                                   <span id="cW" class="close">&times;</span>
-                                    <center> <h5> I created a web server from scratch for my Advanced Programming class  </h5> </center>
-                                    <p> The web server implements a subset of HTTP 1.0, and handles GET requests for static content. In addition, it returns dynamic content by searching through a database.</p>
+                                    <center> <h5> I created a web server from scratch for my Advanced Programming class </h5> </center>
+                                    <p> The web server implements a subset of HTTP 1.0, and handls GET requests for static content. In addition, it returns dynamic content by searching through a database.</p>
 
 
                                     <p> <b> Tools/Languages I used: </b>
