Added underline to project names

--- a/index.html
+++ b/index.html
@@ -331,6 +331,7 @@
         <div class="row">
           <div class="section-heading text-center col-md-12">
               <h2>My <strong>Portfolio</strong></h2>
+              <h4>Click on a Project to learn more </h4>
             </div>
         </div>
         <div class="filters">
@@ -358,7 +359,7 @@
                                  </a>   -->                                
                               </div>
                       <div class="p-inner">
-                          <h4 id="myStutter">Stutter App</h4>
+                        <h4 id="myStutter"><u> Stutter App </u></h4>
                         <div class="cat">A Machine Learning App </div>
                       </div>          
 
@@ -420,7 +421,7 @@
 
 
                 <div class="p-inner">
-                    <h4 id="myTime">Time Manager</h4>
+                  <h4 id="myTime"> <u> Time Manager </u> </h4>
                   <div class="cat">A Google CodeU Project </div>
                 </div>    
 
@@ -484,7 +485,7 @@
                                   
                               </div>
                                 <div class="p-inner">
-                                    <h4 id="myHomophily" class="myBtn">Homophily</h4>
+                                  <h4 id="myHomophily" class="myBtn"><u> Homophily </u> </h4>
                                     <div class="cat">Data Processing and Visualization</div>
                                 </div>
                                 <!-- MODAL -->
@@ -541,7 +542,7 @@
                   </a>    -->                             
                               </div> 
                                 <div class="p-inner">
-                                    <h4 id="myDrop">Drop Solution</h4>
+                                  <h4 id="myDrop"> <u> Drop Solution </u> </h4>
                                     <div class="cat">Google Chrome Extension</div>
                                 </div>
 
@@ -596,7 +597,7 @@
                   </a>   -->                              
                               </div>
                                 <div class="p-inner">
-                                    <h4 id="myWeb">Web Server</h4>
+                                  <h4 id="myWeb"> <u> Web Server</u> </h4>
                                     <div class="cat">COMS W3157: Advanced Programming</div>
                                 </div>
 
@@ -648,7 +649,7 @@
                   </a>  -->                               
                               </div>
                                 <div class="p-inner">
-                                    <h4 id="myPython"> Python Data Visualization </h4>
+                                  <h4 id="myPython"><u>  Python Data Visualization </u>  </h4>
                                     <div class="cat">ENGI 1002: Python</div>
                                 </div>
 
@@ -700,7 +701,7 @@
                   </a>   -->                              
                               </div>
                                 <div class="p-inner">
-                                    <h4 id="myAOE"> Tamagotchi Arduino </h4>
+                                  <h4 id="myAOE"> <u> Tamagotchi Arduino </u>  </h4>
                                     <div class="cat">An Art of Engineering Project </div>
                                 </div>
 
