--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="container">
         <div class="row intro-text align-items-center justify-content-center">
           <div class="col-md-10 text-center">
-            <h1 class="site-heading site-animate">Juvaria Shahid<!--  <strong>Jean Smith</strong> --></h1>
+            <h1 class="site-heading site-animate">Juvaria Shahidgfd<!--  <strong>Jean Smith</strong> --></h1>
             <p class="lead site-subheading mb-4 site-animate">I'm a junior at Columbia University studying computer science </p>
             <!-- <p><a href="#section-about" class="smoothscroll btn btn-primary px-4 py-3">More On Me</a></p> -->
           </div>
