--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       <div class="container">
         <div class="row intro-text align-items-center justify-content-center">
           <div class="col-md-10 text-center">
-            <h1 class="site-heading site-animate">Juvaria Shahidgfd<!--  <strong>Jean Smith</strong> --></h1>
+            <h1 class="site-heading site-animate">Juvaria Shahid<!--  <strong>Jean Smith</strong> --></h1>
             <p class="lead site-subheading mb-4 site-animate">I'm a junior at Columbia University studying computer science </p>
             <!-- <p><a href="#section-about" class="smoothscroll btn btn-primary px-4 py-3">More On Me</a></p> -->
           </div>
@@ -67,25 +67,17 @@
     <section class="site-section" id="section-about">
       <div class="container">
         <div class="row mb-5 align-items-center">
-          <div class="col-lg-7 pr-lg-5 mb-5 mb-lg-0">
-            <img src="images/face.JPG" alt="Image placeholder" class="img-fluid">
-          </div>
-          <div class="col-lg-5 pl-lg-5">
+          <!-- <div class="col-lg-7 pr-lg-5 mb-5 mb-lg-0"> -->
+            <!-- <img src="images/face.JPG" alt="Image placeholder" class="img-fluid"> -->
+          <!-- </div> -->
+          <div>
+          <!-- <div class="col-lg-5 pl-lg-5"> -->
             <div class="section-heading">
               <h2>About <strong>Me</strong></h2>
             </div>
-            <!-- <p class="lead">Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p> -->
-            <p class="mb-5  ">I am a junior at Columbia University pursuing a B.S in computer science. I am passionate about solving problems using technology, specifically through machine learning and creative technology.</p>
+            <p>I am a junior at Columbia University pursuing a B.S in computer science. I am passionate about solving problems using technology, specifically through machine learning and creative technology.</p>
 
-            <p class="mb-5  ">When I am not programming, I am teaching it. I have been an teaching at the Upperline School of Code for the past 3 summers</p>
-
-            <!-- <p class="mb-5  ">I am also a motivational speaker and content creator on YouTube</p> -->
-
-
-            <!-- <p>
-              <a href="#section-contact" class="btn btn-primary px-4 py-2 btn-sm smoothscroll">Download CV</a>
-              <!-- <a href="#" class="btn btn-secondary px-4 py-2 btn-sm">Download CV</a> -->
-            <!-- </p> --> 
+            <p>When I am not programming, I am teaching it. I have been an teaching at the Upperline School of Code for the past 3 summers</p>
           </div>
         </div>
 
