--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             </div>
             <p>I am a junior at Columbia University pursuing a B.S in computer science. I am passionate about solving problems using technology, specifically through machine learning and creative technology.</p>
 
-            <p> I am currently an software engineering intern for <a href = "https://www.koodos.com/"> Koodos </a> </p>
+            <p> I am currently a software engineering intern at <a href = "https://www.koodos.com/"> Koodos </a> </p>
             
             <p>I am fascinated by the intersection of law and tech. I am working with a team of lawyers and computer scientists under <a href = "https://www.law.columbia.edu/graduate-legal-studies/jsd-program/jsd-candidates-new/Frank-Giaoui"> Dr.Frank Giaoui</a> to research and develop a software to predict the judiciary outcome of litigated cases. </p>
 
