--- a/index.html
+++ b/index.html
@@ -530,8 +530,8 @@
                                     <a class = "link" href = "http://juvariashahid.pythonanywhere.com/" > Open project </a>
                                     <a class = "link" href = "pythonanywhere.com/juvariashahid"> View my code </a>
                                     <br>
-                                    <p> This is a passion project I created in my sophmore year to get my feet wet with machine learning. I came up with the idea when I noticed that some of my closest freinds who stuttered often were not able to identify when/where they stuttered. </p>
-                                    <p> In addition, I was inspired by <a class = "link" href = "http://web.stanford.edu/class/cs224s/reports/Manu_Chopra.pdf" >this </a> paper written by Stanford undergraduates: . After training my own model, I found that my model did better than theirs.</p>
+                                    <p> This is a passion project I created in my sophmore year to get my feet wet with machine learning. </p>
+                                    <p> I was inspired by <a class = "link" href = "http://web.stanford.edu/class/cs224s/reports/Manu_Chopra.pdf" >this </a> paper written by Stanford undergraduates: . After training my own model, I found that my model did better than theirs.</p>
                                     <p> <b> Tools/Languages I used: </b>
                                       <ul>
                                         <li> Python </li>
@@ -542,10 +542,10 @@
                                     </p>
                                     <p> <b> Skills I learned or became better at: </b>
                                       <ul>
-                                        <li> Collecting Data: I used the data from University Of London's Speech Archive. I manually annotated over 50 audio files using Praat (link).  </li>
-                                        <li> Training Data: I built a feature extraction system. Some notable features I looked for in my audio files were: MCC....</li>
+                                        <li> Collecting Data: I used the data from University Of London's Speech Archive. I manually annotated over 50 audio files using Praat.  </li>
+                                        <li> Training Data: I built a feature extraction system. Some notable features I looked for in my audio files were: MCC, Pitch, Intensity.</li>
                                         <li>Connected my model with my webpage to run it live: I used python anywhere to export my model easily and create my webpage</li>
-                                        <li>Data Visualization: I used p5.js, seawave.js to create this visual to show stuttered instances in speech: (attach image)</li>
+                                        <li>Data Visualization: I used p5.js, seawave.js to create this visual to show stuttered instances in speech</li>
                                       </ul>
                                     </p>
                                 </div>
