--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <li class="nav-item"><a class="nav-link" href="#section-home">Home</a></li>
             <li class="nav-item"><a class="nav-link" href="#section-about">About</a></li>
             <li class="nav-item"><a class="nav-link" href="#section-portfolio">Portfolio</a></li>
-            <li class="nav-item"><a href="https://juvariashahid.com/" class="nav-link" >Blog</a></li>
+<!--             <li class="nav-item"><a href="https://juvariashahid.com/" class="nav-link" >Blog</a></li> -->
             <li class="nav-item"><a class="nav-link" href="#section-contact">Contact Me</a></li>
           </ul>
         </div>
@@ -64,6 +64,7 @@
           <div class="col-md-10 text-center">
             <h1 class="site-heading site-animate">Juvaria Shahid</h1>
             <p class="lead site-subheading mb-4 site-animate">CS @ Columbia 2021</p>
+            <button type="button" class="btn btn-light"><a href= "https://juvariashahid.com/">New Website </a></button>
           </div>
         </div>
       </div>
