--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <div class="col-md-10 text-center">
             <h1 class="site-heading site-animate">Juvaria Shahid</h1>
             <p class="lead site-subheading mb-4 site-animate">CS @ Columbia 2021</p>
-            <button type="button" class="btn btn-light"><a href= "https://juvariashahid.com/">New Website </a></button>
+            <button type="button" class="btn btn-light"><a href= "https://juvariashahid.com/"> Click to View My New Website :) </a></button>
           </div>
         </div>
       </div>
